# titleBarMenu

./: CMakeLists.txt  README.md  qtstatic.cmake  resources.qrc
include/: borderLess.h  image.h  mainWindow.h  titleBarWindow.h  windowWithImage.h
src/: main.cpp  mainWindow.cpp
